guestbook/guestbook-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
spec:
  selector:
    app: guestbook-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
